x overflow fix

--- a/assets/sass/_general.scss
+++ b/assets/sass/_general.scss
@@ -60,6 +60,7 @@ body {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    overflow-x: hidden;
 }
 
 section {
