--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -103,6 +103,7 @@
         position: absolute;
         border-radius: 50%;
         border: 2px solid var(--secondary-border);
+        opacity: 0;
     }
 }
 
@@ -190,59 +191,69 @@ section.home-portfolio {
         font-size: 1.5rem;
         margin-bottom: 50px;
     }
+
+
 }
 
 .portfolio-preview-card {
     transition: all 0.35s ease-in-out;
     text-decoration: none;
     position: absolute;
-    
-
-    @media screen and (max-width: 768px) {
-        //width: 100%;
-        
-    }
     @extend %phone-80-percent;
 
     @media screen and (min-width: 769px) {
         width: 50%;
     }
+
+    transition: transform 0.3s ease-in-out;
+
+    &:hover {
+
+        figure{
+            transform: scale(1.05);
+
+        }
+        .portfolio-preview-img{
+
+            @extend %shadow-effect;
+        }
+}
 }
 
 
-figure {
-    @include reusables.flex(column, center, center);
-    gap: 20px;
-    padding: 12px;
 
-    figcaption {
-        padding: 4px 15px;
-        text-align: center;
-        color: var(--text);
-        width: fit-content;
-        max-width: 50%;
-        margin-top: 20px;
-        position: absolute;
-        right: 30px;
-        bottom: 30px;
-        background-color: var(--primary);
-        color: var(--text-2);
-        border-radius: 10px;
-        font-size: 1rem;
-        word-wrap: break;
-    }
+.card-title {
+    padding: 4px 15px;
+    text-align: center;
+    color: var(--text);
+    width: fit-content;
+    max-width: 50%;
+    margin-top: 20px;
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+    background-color: var(--primary);
+    color: var(--text-2);
+    border-radius: 10px;
+    font-size: 1rem;
+    word-wrap: break;
+
+
 }
 
+figure{
+    transition: transform 0.3s ease-in-out;
+}
 
 .portfolio-preview-img {
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.295);
-    transition: all 0.3s ease-in-out;
     object-fit: cover;
     border-radius: 20px;
     width: 100%;
     height: 300px;
+    transition: box-shadow 0.3s ease-in-out;
+    
 }
-
 
 /* animations */
 
@@ -290,7 +301,7 @@ figure {
     @keyframes slideFromRight {
         from {
             opacity: 0;
-            transform: translateX(100px);
+            transform: translateX(50px);
         }
 
         to {
@@ -298,6 +309,10 @@ figure {
             transform: translateX(0%);
         }
     }
+
+    
+
+    z-index: 2;
 }
 
 
@@ -314,7 +329,9 @@ figure {
 
         to {
             opacity: 0;
-            transform: translateX(-100px);
+            transform: translateX(-50px);
         }
     }
+
+    z-index: 1;
 }
