--- a/css/about_page.css
+++ b/css/about_page.css
@@ -82,6 +82,7 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  overflow-x: hidden;
 }
 
 section {
