--- a/css/portfolio_page.css
+++ b/css/portfolio_page.css
@@ -75,6 +75,7 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  overflow-x: hidden;
 }
 
 section {
